// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros 1. client-side: 1. client-side 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation", [])
    

      ↓ ↓ ↓ ↓ ↓ ↓

function _dynamicImport_() {
  return import(
    /* webpackChunkName: "default-ssr-computations" */ "./a.ssr-computation"
  );
}
import useSSRComputation_Client from "@popmenu/use-ssr-computation.runtime/lib/useSSRComputation_Client";
const x = useSSRComputation_Client(
  _dynamicImport_,
  [],
  {},
  "tests/a.ssr-computation",
);

`;

exports[`macros 1. no usage: 1. no usage 1`] = `

import { useSSRComputation } from "../lib/index.macro"

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`macros 2. multiple-imports-client-side: 2. multiple-imports-client-side 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation", [])
const y = useSSRComputation("./b.ssr-computation", [])
    

      ↓ ↓ ↓ ↓ ↓ ↓

function _dynamicImport_2() {
  return import(
    /* webpackChunkName: "default-ssr-computations" */ "./b.ssr-computation"
  );
}
function _dynamicImport_() {
  return import(
    /* webpackChunkName: "default-ssr-computations" */ "./a.ssr-computation"
  );
}
import useSSRComputation_Client from "@popmenu/use-ssr-computation.runtime/lib/useSSRComputation_Client";
const x = useSSRComputation_Client(
  _dynamicImport_,
  [],
  {},
  "tests/a.ssr-computation",
);
const y = useSSRComputation_Client(
  _dynamicImport_2,
  [],
  {},
  "tests/b.ssr-computation",
);

`;

exports[`macros 2. server-side: 2. server-side 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation", []);
    

      ↓ ↓ ↓ ↓ ↓ ↓

import __a from "./a.ssr-computation";
import useSSRComputation_Server from "@popmenu/use-ssr-computation.runtime/lib/useSSRComputation_Server";
const x = useSSRComputation_Server(__a, [], {}, "tests/a.ssr-computation");

`;

exports[`macros 3. custom-wepback-chunk-client-side: 3. custom-wepback-chunk-client-side 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation", [], { webpackChunkName: "custom-chunk-name" })
    

      ↓ ↓ ↓ ↓ ↓ ↓

function _dynamicImport_() {
  return import(
    /* webpackChunkName: "custom-chunk-name-ssr-computations" */ "./a.ssr-computation"
  );
}
import useSSRComputation_Client from "@popmenu/use-ssr-computation.runtime/lib/useSSRComputation_Client";
const x = useSSRComputation_Client(
  _dynamicImport_,
  [],
  {},
  "tests/a.ssr-computation",
);

`;

exports[`macros 3. multiple-imports-server-side: 3. multiple-imports-server-side 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation", [])
const y = useSSRComputation("./b.ssr-computation", [])
    

      ↓ ↓ ↓ ↓ ↓ ↓

import __b from "./b.ssr-computation";
import __a from "./a.ssr-computation";
import useSSRComputation_Server from "@popmenu/use-ssr-computation.runtime/lib/useSSRComputation_Server";
const x = useSSRComputation_Server(__a, [], {}, "tests/a.ssr-computation");
const y = useSSRComputation_Server(__b, [], {}, "tests/b.ssr-computation");

`;

exports[`macros 4. client-side inside a react component: 4. client-side inside a react component 1`] = `


import React from "react"
import { useSSRComputation } from "../lib/index.macro"

const ReactComponent = () => {
  const x = useSSRComputation("./a.ssr-computation", []);
  // To make sure that the macro generate unqiue names
  const _dynamicImport_ = null;
}
    

      ↓ ↓ ↓ ↓ ↓ ↓

function _dynamicImport_2() {
  return import(
    /* webpackChunkName: "default-ssr-computations" */ "./a.ssr-computation"
  );
}
import useSSRComputation_Client from "@popmenu/use-ssr-computation.runtime/lib/useSSRComputation_Client";
import React from "react";
const ReactComponent = () => {
  const x = useSSRComputation_Client(
    _dynamicImport_2,
    [],
    {},
    "tests/a.ssr-computation",
  );
  // To make sure that the macro generate unqiue names
  const _dynamicImport_ = null;
};

`;

exports[`macros 4. server-side with skip property: 4. server-side with skip property 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const skip = true;
const x = useSSRComputation("./a.ssr-computation", [], { skip, webpackChunkName: "custom-chunk-name" })
    

      ↓ ↓ ↓ ↓ ↓ ↓

import __a from "./a.ssr-computation";
import useSSRComputation_Server from "use-ssr-computation.runtime/lib/useSSRComputation_Server";
const skip = true;
const x = useSSRComputation_Server(
  __a,
  [],
  {
    skip,
  },
  "tests/a.ssr-computation",
);

`;

exports[`macros 5. client-side with skip option: 5. client-side with skip option 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const skip = true;
const x = useSSRComputation("./a.ssr-computation", [], { skip, webpackChunkName: "custom-chunk-name" })
    

      ↓ ↓ ↓ ↓ ↓ ↓

function _dynamicImport_() {
  return import(
    /* webpackChunkName: "custom-chunk-name-ssr-computations" */ "./a.ssr-computation"
  );
}
import useSSRComputation_Client from "use-ssr-computation.runtime/lib/useSSRComputation_Client";
const skip = true;
const x = useSSRComputation_Client(
  _dynamicImport_,
  [],
  {
    skip,
  },
  "tests/a.ssr-computation",
);

`;

exports[`macros 5. server-side with serverSideOnly: 5. server-side with serverSideOnly 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const skip = true;
const x = useSSRComputation("./a.ssr-computation", [], { serverSideOnly: true })
    

      ↓ ↓ ↓ ↓ ↓ ↓

import __a from "./a.ssr-computation";
import useSSRComputation_Server from "use-ssr-computation.runtime/lib/useSSRComputation_Server";
const skip = true;
const x = useSSRComputation_Server(__a, [], {}, "tests/a.ssr-computation");

`;

exports[`macros 6. client-side with serverSideOnly option: 6. client-side with serverSideOnly option 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation", [], { webpackChunkName: "custom-chunk-name", serverSideOnly: true })
    

      ↓ ↓ ↓ ↓ ↓ ↓

const x = null;

`;
